# zero-trust-inspector

./: EULA.md  LICENSE  README.md  build.py  requirements.txt  setup.py
docs/: EULA.md  LICENSE  ПЗ 2026.docx
zero-trust/: LICENSE  check_installation.py  check_structure.py  main.py  pyproject.toml  run.py
zero-trust/assets/: device_fingerprints.json  oui_database.json
zero-trust/configs/: default.yaml
zero-trust/configs/templates/: iptables.j2  openwrt.j2  windows.ps1  windows_firewall.j2
zero-trust/exports/: policy.json
zero-trust/src/: init.py
zero-trust/src/core/: constants.py  exceptions.py  generator.py  init.py  models.py  scanner.py
zero-trust/src/engine/: config_manager.py  init.py  policy_engine.py  rule_generator.py
zero-trust/src/gui/: init.py  main_window.py  styles.py
zero-trust/src/gui/components/: device_item.py  device_list.py  init.py  network_canvas.py  zone_widget.py
zero-trust/src/gui/dialogs/: export_dialog.py  init.py  rule_editor.py  settings_dialog.py
zero-trust/src/gui/pages/: __init__.py  constructor.py  dashboard.py  generator.py  reports.py  scanner.py  settings.py  validator.py
zero-trust/src/gui/styles/: main.css
zero-trust/src/policy/: generator.py
zero-trust/src/scanner/: device_classifier.py  fingerprint_db.py  init.py  network_scanner.py
zero-trust/src/utils/: file_utils.py  format_utils.py  init.py  network_utils.py  validation_utils.py
zero-trust/src/validation/: init.py  policy_validator.py  report_generator.py  test_suite.py
zero-trust/tests/: test_core.py
