[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerotrust-inspector"
version = "1.0.0"
description = "ZeroTrust Inspector: Визуализатор и валидатор Zero-Trust политик"
readme = "README.md"
authors = [
    {name = "Ваше Имя", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["cybersecurity", "zero-trust", "network-security", "iot-security"]
dependencies = [
    "PyQt6>=6.5.0",
    "python-nmap>=0.7.1",
    "scapy>=2.5.0",
    "Jinja2>=3.1.2",
    "psutil>=5.9.0",
    "netifaces>=0.11.0",
    "PyYAML>=6.0",
    "colorlog>=6.7.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
]
ssh = ["paramiko>=3.0.0"]
http = ["requests>=2.28.0"]
pdf = ["reportlab>=4.0.0"]

[project.urls]
Homepage = "https://github.com/username/zerotrust-inspector"
Documentation = "https://github.com/username/zerotrust-inspector#readme"
Issues = "https://github.com/username/zerotrust-inspector/issues"
Source = "https://github.com/username/zerotrust-inspector"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
